[gd_scene load_steps=15 format=3 uid="uid://41gmpj5u34w8"]

[ext_resource type="Script" path="res://GameFiles/Game Objects/Fountain/Fountain.gd" id="1_rheew"]
[ext_resource type="Texture2D" uid="uid://fg3xakyhlamx" path="res://GameFiles/Assets/Art/World Objects/everything.png" id="2_c75j0"]
[ext_resource type="PackedScene" uid="uid://ydmxubnmay2o" path="res://GameFiles/Game Objects/Components/hurtbox_component.tscn" id="2_sgnlf"]
[ext_resource type="Texture2D" uid="uid://dgoai1xi1p80" path="res://GameFiles/Assets/Art/World Objects/BlackLightLayer.png" id="3_r7an1"]
[ext_resource type="PackedScene" uid="uid://crnse58x3gauc" path="res://GameFiles/Game Objects/Components/conversion_component.tscn" id="4_fxn5n"]
[ext_resource type="PackedScene" uid="uid://b25iseq2d0dnd" path="res://GameFiles/Game Objects/Components/health_component.tscn" id="5_vuy3c"]
[ext_resource type="Texture2D" uid="uid://cicvqntonr2l7" path="res://GameFiles/Assets/Art/World Objects/fountain2.png" id="6_xjgax"]
[ext_resource type="PackedScene" uid="uid://bs7ixulkrq5ho" path="res://GameFiles/Game Objects/Fountain/darkness_tile.tscn" id="7_rqkjj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rfk82"]
radius = 11.25
height = 34.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d0pl5"]
radius = 8.0
height = 32.0

[sub_resource type="Gradient" id="Gradient_gliqy"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_d835n"]
gradient = SubResource("Gradient_gliqy")
width = 16
height = 4

[sub_resource type="Gradient" id="Gradient_y3bkf"]
colors = PackedColorArray(1, 0, 0, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l3ydt"]
gradient = SubResource("Gradient_y3bkf")
width = 16
height = 4

[node name="Fountain" type="StaticBody2D" groups=["fountain"]]
z_index = 5
collision_mask = 0
script = ExtResource("1_rheew")
faction = 1
darknessTile = ExtResource("7_rqkjj")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_sgnlf")]
position = Vector2(-7.45058e-09, 0)
collision_layer = 17
collision_mask = 0
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(1.49012e-08, 7)
rotation = -1.57079
scale = Vector2(0.8, 1)
shape = SubResource("CapsuleShape2D_rfk82")

[node name="FountainOfLight Image" type="Sprite2D" parent="."]
texture = ExtResource("2_c75j0")
region_enabled = true
region_rect = Rect2(385, 2, 30, 29)

[node name="FountainOfLight Upper" type="Sprite2D" parent="FountainOfLight Image"]
z_index = 7
position = Vector2(0, -5)
texture = ExtResource("2_c75j0")
region_enabled = true
region_rect = Rect2(395, 2, 10, 19)

[node name="FountainOfDarkness Image" type="Sprite2D" parent="FountainOfLight Image/FountainOfLight Upper"]
modulate = Color(0, 0, 0, 0.67451)
self_modulate = Color(0, 0, 0, 0.745098)
position = Vector2(0, 5)
texture = ExtResource("2_c75j0")
region_enabled = true
region_rect = Rect2(385, 2, 30, 29)

[node name="DarkLight" type="Sprite2D" parent="FountainOfLight Image/FountainOfLight Upper/FountainOfDarkness Image"]
modulate = Color(0, 0, 0, 1)
position = Vector2(0, -10)
texture = ExtResource("3_r7an1")
region_rect = Rect2(396, 2, 8, 9)

[node name="Converted_30" type="Sprite2D" parent="FountainOfLight Image/FountainOfLight Upper"]
visible = false
modulate = Color(0, 0, 0, 0.776471)
self_modulate = Color(0, 0, 0, 0.956863)
position = Vector2(0, 14)
texture = ExtResource("2_c75j0")
region_enabled = true
region_rect = Rect2(385, 21, 30, 10)

[node name="Converted_60" type="Sprite2D" parent="FountainOfLight Image/FountainOfLight Upper"]
visible = false
modulate = Color(0, 0, 0, 0.776471)
self_modulate = Color(0, 0, 0, 0.956863)
position = Vector2(0, 10)
texture = ExtResource("2_c75j0")
region_enabled = true
region_rect = Rect2(385, 12, 30, 19)

[node name="Health70" type="Sprite2D" parent="FountainOfLight Image/FountainOfLight Upper"]
visible = false
modulate = Color(0.227451, 0.227451, 0.227451, 1)
position = Vector2(-3, 15)
texture = ExtResource("6_xjgax")
region_enabled = true
region_rect = Rect2(75, 32, 36, 20)

[node name="Health30" type="Sprite2D" parent="FountainOfLight Image/FountainOfLight Upper"]
visible = false
modulate = Color(0.227451, 0.227451, 0.227451, 1)
position = Vector2(-2.25, 14.78)
scale = Vector2(0.98, 0.97619)
texture = ExtResource("6_xjgax")
region_enabled = true
region_rect = Rect2(133, 32, 50, 21)

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0

[node name="ConversionComponent" parent="." instance=ExtResource("4_fxn5n")]
max_conversion_hp = 3
current_conversion_hp = 3
CanParentBecomeFollower = false

[node name="HealthComponent" parent="." instance=ExtResource("5_vuy3c")]
max_health_points = 100.0
current_health_points = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_d0pl5")

[node name="HealthBar" type="TextureProgressBar" parent="."]
visible = false
z_index = 7
offset_left = -9.0
offset_top = -20.0
offset_right = 7.0
offset_bottom = -16.0
max_value = 1.0
step = 0.01
value = 1.0
texture_under = SubResource("GradientTexture2D_d835n")
texture_progress = SubResource("GradientTexture2D_l3ydt")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="conversion_hp_depleted" from="ConversionComponent" to="." method="_on_conversion_component_conversion_hp_depleted"]
[connection signal="conversion_hp_lost" from="ConversionComponent" to="." method="_on_conversion_component_conversion_hp_lost"]
[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_component_health_depleted"]
[connection signal="health_lost" from="HealthComponent" to="." method="_on_health_component_health_lost"]
